css combinators added

--- a/index.html
+++ b/index.html
@@ -18,16 +18,17 @@
     </ul> -->
     <!-- <a href="https://google.co.uk">Google</a>
     <a href="https://yahoo">Yahoo</a> -->
-    <div>
-        <h1>
-            Hello World
-        </h1>
+    <div class="first-div">
+        <h1>Hello World</h1>
+        <h1>Hello Universe</h1>
+        <h1>Hello Planet</h1>
+        
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, corrupti architecto illo nesciunt officia autem, magnam pariatur accusantium tempora incidunt explicabo doloribus, vel rem consequuntur impedit commodi modi molestias qui porro ipsam beatae? Ab ratione magnam perspiciatis commodi reiciendis officiis, tempora consectetur veritatis quia illum dicta, odio, dolor vel delectus?
         </p>
 
     </div>
-    <div>
+    <div class="second-div">
         <h1>Hello Jupiter</h1>
         <ul>
             <li>Item One</li>
