--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="./style.css">
     
 </head>
+
+<header>
+    <nav>
+        <ul>
+            <li><a href="boxmodel.html">Box Model</a></li>
+        </ul>
+    </nav>
+</header>
+
 <body>
     <!-- <h1 id="title">Hello World</h1> -->
     <!-- <h1 class="odd">Hello Jupiter </h1> -->
