--- a/boxmodel.html
+++ b/boxmodel.html
@@ -10,6 +10,8 @@
             width: 300px;
             height: 300px;
             background-color: tomato;
+            padding: 40px 20px;
+            text-align:justify
 
         }
         .box2 {
@@ -21,8 +23,15 @@
     </style>
 </head>
 <body>
-    <div class="box1">Box One</div>
-    <div class="box2">Box Two</div>
+    <div class="box1">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, atque nihil nulla a rem repellat est perferendis perspiciatis deserunt fuga aliquid asperiores similique beatae totam, quaerat deleniti? Est harum vitae voluptatem repellat obcaecati eos eum accusantium sed asperiores officiis illo ut, totam nisi culpa nobis quibusdam ipsam velit perspiciatis aspernatur?</p>
+    </div>
+    <div class="box2">
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit provident alias natus, enim corporis adipisci id soluta exercitationem maiores incidunt doloribus esse officiis rem similique, praesentium voluptas optio sint, eum architecto ea veniam? Corporis blanditiis quidem illum aliquid rem a ex possimus et tenetur. Distinctio autem deserunt doloremque ipsam placeat.</p>
+    </div>
+    
+    <a href="https://google.co.uk">Google</a>
+    <!-- <a href="https://yahoo">Yahoo</a> -->
     
 </body>
 </html>
