--- a/boxmodel.html
+++ b/boxmodel.html
@@ -11,15 +11,37 @@
             height: 300px;
             background-color: tomato;
             padding: 40px 20px;
-            text-align:justify
+            text-align:justify;
+            border: 40px solid black;
+            margin-bottom: 100px;
+            box-sizing: border-box;
+            overflow: auto;
 
         }
         .box2 {
             width: 300px;
             height: 300px;
             background-color: teal;
+            padding:40px 20px;
+            text-align:justify;
+            /* border: 40px solid blueviolet; */
+            margin-bottom: 60px;
 
         }
+
+    a {
+    width: 600px;
+    height: 600px;
+    /* display: inline-block; */
+    background-color: coral;
+    color:white;
+    padding:15px 30px;
+    border: 5px solid green;
+    margin-right: 30px;
+    /* display:inline-block; */
+    width: 300px;
+    height: 300px;
+}
     </style>
 </head>
 <body>
@@ -29,9 +51,16 @@
     <div class="box2">
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit provident alias natus, enim corporis adipisci id soluta exercitationem maiores incidunt doloribus esse officiis rem similique, praesentium voluptas optio sint, eum architecto ea veniam? Corporis blanditiis quidem illum aliquid rem a ex possimus et tenetur. Distinctio autem deserunt doloremque ipsam placeat.</p>
     </div>
+
+     <!-- <div class="box3">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, atque nihil nulla a rem repellat est perferendis perspiciatis deserunt fuga aliquid asperiores similique beatae totam, quaerat deleniti? Est harum vitae voluptatem repellat obcaecati eos eum accusantium sed asperiores officiis illo ut, totam nisi culpa nobis quibusdam ipsam velit perspiciatis aspernatur?</p>
+    </div>
+    <div class="box4">
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit provident alias natus, enim corporis adipisci id soluta exercitationem maiores incidunt doloribus esse officiis rem similique, praesentium voluptas optio sint, eum architecto ea veniam? Corporis blanditiis quidem illum aliquid rem a ex possimus et tenetur. Distinctio autem deserunt doloremque ipsam placeat.</p>
+    </div> -->
     
     <a href="https://google.co.uk">Google</a>
-    <!-- <a href="https://yahoo">Yahoo</a> -->
+    <a href="https://yahoo">Yahoo</a>
     
 </body>
 </html>
